align content needs fixing

--- a/style.css
+++ b/style.css
@@ -67,4 +67,8 @@ p {
 .tictac {
 	background-color:rgb(159, 217, 235);
 	border: 4px solid white;
+	font-size: 80px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
